2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_read_logical): New argument
	recursion_depth. Break infinite resursions. All users updated.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk): Fix use
	after free.
	Reported by: Peter Jones.

2012-03-31  Anton Blanchard  <anton@samba.org>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Do not byteswap
	8 bit values.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix nvram call for PreP.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Degrade
	the error when some elements are missing into a warning.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix out-of-range swap.

2012-03-28  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Invoking grub-probe): New section.
	Reported by: Filipus Klutiero.  Fixes Debian bug #666031.

2012-03-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix tab and wide character handling in editor and menu.

	* grub-core/normal/charset.c (grub_unicode_aglomerate_comb): Don't
	agglomerate control characters with combining marks.
	(bidi_line_wrap): Allow break on tab.
	(grub_unicode_get_comb_start): New function.
	* grub-core/normal/menu_entry.c: Restructure to handle wide characters
	and tab correctly.
	* grub-core/normal/menu_text.c (print_entry): Replace \n, \r, \b and \e
	with a space.
	* grub-core/normal/term.c (print_ucs4_terminal): New argument
	fixed_tab_size. All users updated.
	* include/grub/term.h (GRUB_TERM_TAB_WIDTH): New const.
	(grub_term_getcharwidth): Handle \t.
	* include/grub/unicode.h (grub_unicode_glyph_dup): Fix allocation
	and copy.

2012-03-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle big-endian mdraid.

	* Makefile.util.def (libgrubkern): Add mdraid_linux_be.c.